# SmarterEye-SDK

./: .gitignore  CMakeLists.txt  Release.pro  comm.pri  modules.pri
Docs/Chinese/: C++SDK.md  FAQ.md
Docs/English/: C++SDK(English).md
Examples/: CMakeLists.txt  Examples.pro  find_opencv.cmake  find_pcl.cmake
Examples/BenchmarkClient/: BenchmarkClient.pro  main.cpp
Examples/BenchmarkServer/: main.cpp
Examples/Disparity2DepthDemo/: CMakeLists.txt  framemonitor.cpp  framemonitor.h  main.cpp
Examples/Disparity2PointCloud/: CMakeLists.txt  calibparamsgenerator.cpp  calibparamsgenerator.h  common.h  convertormanage.cpp  convertormanage.h  disparityframeconvertor.cpp  disparityframeconvertor.h  main.cpp  pcviewer.cpp  pcviewer.h
Examples/Disparity2RGBDemo/: CMakeLists.txt  main.cpp  mycamerahandler.cpp  mycamerahandler.h
Examples/Disparity2Real3dDemo/: CMakeLists.txt  main.cpp  mycamerahandler.cpp  mycamerahandler.h
Examples/DisplayFramesDemo/: CMakeLists.txt  framemonitor.cpp  framemonitor.h  main.cpp
Examples/GetCameraParamDemo/: CMakeLists.txt  main.cpp
Examples/GetCompoundDemo/: CMakeLists.txt  main.cpp  mycamerahandler.cpp  mycamerahandler.h
Examples/GetDeviceInfoDemo/: CMakeLists.txt  main.cpp
Examples/GetLaneExtDemo/: CMakeLists.txt  framemonitor.cpp  framemonitor.h  main.cpp
Examples/GetMotionDataDemo/: CMakeLists.txt  main.cpp  mycamerahandler.cpp  mycamerahandler.h
Examples/GetObstacleDemo/: CMakeLists.txt  main.cpp  mycamerahandler.cpp  mycamerahandler.h
Examples/GetPerceptionDemo/: CMakeLists.txt  dataviewer.cpp  dataviewer.h  main.cpp
Examples/ImageStorageDemo/: CMakeLists.txt  frameselector.cpp  frameselector.h  imagestorage.cpp  imagestorage.h  main.cpp
Examples/PointCloudDemo/: CMakeLists.txt  main.cpp  mycamerahandler.cpp  mycamerahandler.h  pcviewer.cpp  pcviewer.h
Examples/StereoCameraDemo/: CMakeLists.txt  main.cpp
ImageUtils/: ImageUtils.pro  disparityconvertor.cpp  obstaclepainter.cpp  roadwaypainter.cpp  smarterFont.cpp  yuv2rgb.cpp
MessageBus/: MessageBus.pro  ipcserver.cpp  ipcserver.h  masterconnection.cpp  masterconnection.h  messagebus.cpp  messagebus.h  messagebus_global.h  messagerouter.h  messageslot.cpp  messageslot.h  messageutils.cpp  messageutils.h  packet.cpp  packet.h  packethandler.h  packetmessageadapter.cpp  packetmessageadapter.h  packetrouter.h  service.cpp  service.h  serviceutils.cpp  serviceutils.h  slaveconnection.cpp  slaveconnection.h
RealtimeDatabase/: RealtimeDatabase.pro  realtimedatabase.cpp  realtimedatabase.h  realtimedatabase_global.h
RtdbManager/: RtdbManager.pro  rtdbmanager.cpp  rtdbmanager.h  rtdbmanager_global.h  savetodisk.h
RtdbService/: RtdbService.pro  rtdbservice.cpp  rtdbservice.h  rtdbservice_global.h
Satp/: Satp.pro  acceptor.cpp  acceptor.h  connector.cpp  connector.h  recvthread.cpp  recvthread.h  satp_global.h  tcpprotocol.cpp  tcpprotocol.h  transmitthread.cpp  transmitthread.h
SatpExt/: SatpExt.pro  filereceiver.cpp  filereceiver.h  filereceiverhandler.h  filesender.cpp  filesender.h  filesenderhandler.h  messageadapter.cpp  messageadapter.h  rtdbsender.cpp  rtdbsender.h  satpext_global.h
SeUdpClient/: SeUdpClient.pro  seudpprotocolclient.cpp
StereoCamera/: StereoCamera.pro  advancedcamera.cpp  advancedcamera.h  autoconnector.cpp  autoconnector.h  devicestatus.cpp  devicestatus.h  firmwareupdater.cpp  firmwareupdater.h  framereceiver.cpp  framereceiver.h  rtdbareceiver.h  rtdbreceiver.cpp  sedevicestate.cpp  stereocamera.cpp  stereocamera_global.h  stereocameraimpl.cpp  stereocameraimpl.h
cmake/: common.cmake  find_opencv.cmake  find_qt.cmake
inc/: LdwDataInterface.h  calibstatusdef.h  deviceinfo.h  frameext.h  frameid.h  gpiodef.h  gpiopinno.h  message.h  metaid.h  motiondata.h  protocolenhanced.h  roadwaypainter.h  rtdbkeys.h  se_udp_protocol.h  sedevicestate.h  seudpprotocolclient.h  smarterFont.h  smartervehicleinfo.h  stereocamera.h  taskiddef.h
scripts/: build.sh
wrapper/ros/src/zkhy_stereo_d/: CMakeLists.txt  package.xml
wrapper/ros/src/zkhy_stereo_d/launch/: display.launch  zkhy_stereo.launch
wrapper/ros/src/zkhy_stereo_d/rviz/: zkhy_stereo.rviz
wrapper/ros/src/zkhy_stereo_d/src/: framemonitor.cpp  framemonitor.h  pointcloudgenerator.cpp  pointcloudgenerator.h  stereo_listener.cpp  stereo_publisher.cpp  stereo_publisher.h
wrapper/ros/src/zkhy_stereo_d/srv/: CameraParams.srv  FrameRate.srv  RotationMatrix.srv
