cmake_minimum_required (VERSION 3.0)

project(Examples)

# Add sub directories
add_subdirectory(StereoCameraDemo)
add_subdirectory(Disparity2Real3dDemo)
add_subdirectory(Disparity2RGBDemo)
add_subdirectory(GetCameraParamDemo)
add_subdirectory(GetCompoundDemo)
add_subdirectory(GetLaneExtDemo)
add_subdirectory(GetMotionDataDemo)
add_subdirectory(GetDeviceInfoDemo)
add_subdirectory(GetPerceptionDemo)
add_subdirectory(Disparity2DepthDemo)
add_subdirectory(ImageStorageDemo)
include(find_opencv.cmake)
if (${OPENCV_FOUND})
    add_subdirectory(DisplayFramesDemo)
endif()

include(find_pcl.cmake)
if (${PCL_FOUND})
    add_subdirectory(PointCloudDemo)
endif()
